--- a/Day-56: Creating Soft Links Using Ansible/playbook.yml
+++ b/Day-56: Creating Soft Links Using Ansible/playbook.yml
@@ -1,1 +1,75 @@
+---
+- name: Manage files and symbolic links on app server 1
+  hosts: stapp01
+  become: yes
+  tasks:
+    - name: Create directory /opt/dba if it doesn't exist
+      file:
+        path: /opt/dba
+        state: directory
+        mode: '0755'
 
+    - name: Create empty file /opt/dba/blog.txt
+      file:
+        path: /opt/dba/blog.txt
+        state: touch
+        owner: tony
+        group: tony
+        mode: '0644'
+
+    - name: Create symbolic link from /opt/dba to /var/www/html
+      file:
+        src: /opt/dba
+        dest: /var/www/html
+        state: link
+        force: yes
+
+- name: Manage files and symbolic links on app server 2
+  hosts: stapp02
+  become: yes
+  tasks:
+    - name: Create directory /opt/dba if it doesn't exist
+      file:
+        path: /opt/dba
+        state: directory
+        mode: '0755'
+
+    - name: Create empty file /opt/dba/story.txt
+      file:
+        path: /opt/dba/story.txt
+        state: touch
+        owner: steve
+        group: steve
+        mode: '0644'
+
+    - name: Create symbolic link from /opt/dba to /var/www/html
+      file:
+        src: /opt/dba
+        dest: /var/www/html
+        state: link
+        force: yes
+
+- name: Manage files and symbolic links on app server 3
+  hosts: stapp03
+  become: yes
+  tasks:
+    - name: Create directory /opt/dba if it doesn't exist
+      file:
+        path: /opt/dba
+        state: directory
+        mode: '0755'
+
+    - name: Create empty file /opt/dba/media.txt
+      file:
+        path: /opt/dba/media.txt
+        state: touch
+        owner: banner
+        group: banner
+        mode: '0644'
+
+    - name: Create symbolic link from /opt/dba to /var/www/html
+      file:
+        src: /opt/dba
+        dest: /var/www/html
+        state: link
+        force: yes
