--- a/Day-59: Ansible Lineinfile Module/playbook.yml
+++ b/Day-59: Ansible Lineinfile Module/playbook.yml
@@ -1,1 +1,37 @@
+---
+- name: Setup httpd web server on app servers
+  hosts: all
+  become: yes
+  serial: 1
+  tasks:
+    - name: Install httpd package
+      package:
+        name: httpd
+        state: present
 
+    - name: Start and enable httpd service
+      service:
+        name: httpd
+        state: started
+        enabled: yes
+
+    - name: Create index.html with initial content
+      copy:
+        content: "This is a Nautilus sample file, created using Ansible!"
+        dest: /var/www/html/index.html
+        owner: apache
+        group: apache
+        mode: '0644'
+
+    - name: Add welcome line at the top of index.html
+      lineinfile:
+        path: /var/www/html/index.html
+        line: "Welcome to xFusionCorp Industries!"
+        insertbefore: BOF
+
+    - name: Ensure correct ownership of index.html
+      file:
+        path: /var/www/html/index.html
+        owner: apache
+        group: apache
+        mode: '0644'
